--- a/packages/moduleA/package.json
+++ b/packages/moduleA/package.json
@@ -11,5 +11,6 @@
   "dependencies": {
     "jquery": "^3.6.0",
     "lodash": "^4.17.21"
-  }
+  },
+  "gitHead": "9e310a0cf12195a33b54a4a788b7b846b7492695"
 }
