--- a/packages/moduleB/package.json
+++ b/packages/moduleB/package.json
@@ -11,5 +11,6 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "vue": "^2.6.14"
-  }
+  },
+  "gitHead": "9e310a0cf12195a33b54a4a788b7b846b7492695"
 }
