--- a/packages/moduleA/package.json
+++ b/packages/moduleA/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lernatest/modulea",
+  "name": "@w-wutianqi/modulea",
   "version": "1.0.3",
   "description": "",
   "main": "index.js",
