--- a/packages/moduleA/package.json
+++ b/packages/moduleA/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "element-ui": "^2.15.6",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21"
   },
