--- a/packages/lernaTest/package.json
+++ b/packages/lernaTest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lerna-wtq-test",
+  "name": "wutianqi-lerna-test",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
@@ -11,5 +11,6 @@
   "dependencies": {
     "@w-wutianqi/modulea": "^1.0.6",
     "@w-wutianqi/moduleb": "^1.0.6"
-  }
+  },
+  "gitHead": "6d9551436218e93c215837d5e7a46e861c36a22d"
 }
