--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@w-wutianqi/lernatest",
   "private": true,
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "vue": "^2.6.14"
   },
   "workspaces": [
     "packages/*"
