--- a/packages/lernaTest/package.json
+++ b/packages/lernaTest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wutianqi-lerna-test",
-  "version": "1.1.0-beta.1",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@w-wutianqi/modulea": "^1.1.0-beta.1",
+    "@w-wutianqi/modulea": "^1.1.0",
     "@w-wutianqi/moduleb": "^1.0.6"
   },
   "gitHead": "6d9551436218e93c215837d5e7a46e861c36a22d"
