--- a/packages/moduleA/package.json
+++ b/packages/moduleA/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@w-wutianqi/modulea",
-  "version": "1.1.0-beta.1",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
